<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            app:cardBackgroundColor="@color/color_white"
            app:cardCornerRadius="15dp"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/SelectedDateTV"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/boogaloo"
                android:gravity="center"
                android:text="@string/currentDate"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            tools:ignore="RelativeOverlap">

            <ImageButton
                android:id="@+id/GoToCalendarBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:background="@color/zxing_transparent"
                android:contentDescription="@string/date_selection_button"
                android:src="@drawable/ic_calendar" />

        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:layout_below="@id/toolbar"
        tools:context=".MainActivity">

        <!-- Card view for displaying the -->
        <!-- Pie chart and details of pie chart -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/color_white"
            app:cardCornerRadius="10dp">


            <!--Linear layout to display pie chart -->
            <!-- and details of pie chart-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">

                <!--Pie chart to display the data-->


                <!--Creating another linear layout -->
                <!-- to display pie chart details -->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <!--Linear layout to display carbs-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical">

                        <!--View to display the yellow color icon-->

                        <!--Text view to display Calories -->

                        <ImageView
                            android:id="@+id/calorieView"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="7.5dp"
                            android:src="@drawable/ic_calories"
                            android:contentDescription="@string/calories" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="@dimen/CalorieTVWidth"
                            android:layout_height="match_parent"
                            android:id="@+id/CalorieInputLayout"
                            android:layout_toEndOf="@id/calorieView"
                            android:layout_marginStart="5dp"
                            android:hint="@string/calories"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxStrokeColor="@color/colorPrimary"
                            android:textColorHint="@color/color_black"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/CalorieInput"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:maxLength="5"
                                android:fontFamily="@font/boogaloo"
                                android:inputType="number"
                                android:textColor="@color/color_black"/>
                        </com.google.android.material.textfield.TextInputLayout>


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <!--View to display the green color icon-->
                        <ImageView
                            android:id="@+id/carbView"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="7.5dp"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_carbohydrates"
                            android:contentDescription="@string/carbs" />

                        <!--Text view to display carbs text -->

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="@dimen/SetMetricTVWidth"
                            android:layout_height="match_parent"
                            android:id="@+id/CarbInputLayout"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@id/carbView"
                            android:hint="@string/carbs"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxStrokeColor="@color/colorPrimary"
                            android:textColorHint="@color/color_black"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/CarbInput"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:maxLength="3"
                                android:fontFamily="@font/boogaloo"
                                android:inputType="number"
                                android:textColor="@color/color_black"/>
                        </com.google.android.material.textfield.TextInputLayout>


                    </RelativeLayout>

                    <!--Linear layout to display Fats-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <!--View to display the red color icon-->
                        <ImageView
                            android:id="@+id/fatView"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="7.5dp"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_fat"
                            android:contentDescription="@string/fats" />

                        <!--Text view to display Fats text -->


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="@dimen/SetMetricTVWidth"
                            android:layout_height="match_parent"
                            android:id="@+id/FatInputLayout"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@id/fatView"
                            android:fontFamily="@font/boogaloo"
                            android:gravity="center_vertical|end"
                            android:hint="@string/fats"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxStrokeColor="@color/colorPrimary"
                            android:textColorHint="@color/color_black"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/FatInput"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:maxLength="3"
                                android:fontFamily="@font/boogaloo"
                                android:inputType="number"
                                android:textColor="@color/color_black"/>
                        </com.google.android.material.textfield.TextInputLayout>


                    </RelativeLayout>

                    <!--Linear layout to display Protein-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp">

                        <!--View to display the red color icon-->
                        <ImageView
                            android:id="@+id/proteinView"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="7.5dp"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_protein"
                            android:contentDescription="@string/protein" />

                        <!--Text view to display Protein text -->

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="@dimen/SetMetricTVWidth"
                            android:layout_height="match_parent"
                            android:id="@+id/ProteinInputLayout"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@id/proteinView"
                            android:fontFamily="@font/boogaloo"
                            android:gravity="center_vertical|end"
                            android:hint="@string/protein"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxStrokeColor="@color/colorPrimary"
                            android:textColorHint="@color/color_black"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ProteinInput"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:maxLength="3"
                                android:fontFamily="@font/boogaloo"
                                android:inputType="number"
                                android:textColor="@color/color_black"/>
                        </com.google.android.material.textfield.TextInputLayout>


                    </RelativeLayout>

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">


                        <org.eazegraph.lib.charts.PieChart
                            android:id="@+id/metric_pie_chart"
                            android:layout_width="125dp"
                            android:layout_height="125dp"
                            android:padding="6dp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/SaveInputBtn"
                            android:background="@android:color/transparent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_plus_circle"
                            android:contentDescription="@string/add_metrics" />

                    </RelativeLayout>



                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>





</RelativeLayout>